--- a/content/post/2018-01-28-hire-me-as-a-datascientist-part-iii.Rmd
+++ b/content/post/2018-01-28-hire-me-as-a-datascientist-part-iii.Rmd
@@ -15,10 +15,10 @@ For the third post I'll explore the question:
 Whereas the posts before were questions on sorting data, this is our first attempt to make some statistical models.
 In this case, we're going to be doing a bit of regression modeling. 
 
-Of all the types of regression, there are a couple of ways to tackle this problem.
+There are a couple of ways to tackle this problem.
 We could run some basic linear regression models and spend the whole post talking beta coefficients and what assumptions we violated.
 We could do a linear mixed effects model, then realize that doing so would be a terrible choice (I tried it for the fun of it, bad idea).
-Or we do some fun non-parametric, machine learning models that are on the easier-to-interpret side. 
+Or we do a fun non-parametric, machine learning model that is on the easier-to-interpret side. 
 Since machine learning is so hot right now, let's stick with that. 
 
 ## Machine Learning and Non-Parametric Models 
