--- a/content/post/2018-04-09-to-dos-and-boundaries.Rmd
+++ b/content/post/2018-04-09-to-dos-and-boundaries.Rmd
@@ -113,6 +113,8 @@ The first is that I don't believe you are as productive as you could be.
 I'd personally pay for the Go-Pro for you to wear all week and would be interested to know much time people accidentally waste each day looking at social media and doing other unproductive things.
 The other is that you might consider your ability to say 'No' to people.
 One of the hardest things I have hard to learn is to say 'No' and not let productivty creep happen (become more productive, get more time, fill free time with work).
+Saying 'No' is very hard but I actually got a lot of help learning about it when I read [Henry Cloud's](https://twitter.com/DrHenryCloud) book on [Boundaries](https://www.amazon.com/Boundaries-Updated-Expanded-When-Control/dp/0310351804/ref=sr_1_1?ie=UTF8&qid=1523372885&sr=8-1&keywords=boundaries+book) about six years ago.
+I could do a whole blog post on that book.
 
 While there is something to be said about just falling deep into your work, especially at the start of grad school, I always try to do a bit of self reflection and ask myself if what I am doing is sustainable.
 The first two years of my PhD were not and it lead to me being very depressed and irritable at times.
